Organize project structure and fix order item quantity/mapping issues